# QAPAL

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  QAPAL_PRODUCT_DESCRIPTION.txt  README.md  __init__.py  _log.py  _tokens.py  action.yml  action_miner.py  actions.py  ai_client.py  assertions.py  autoex_prd.md  books_prd.md  bookshop_prd.md  checkboxes_prd.md  cli.py  codegen.py  compiled_model.json  crawler.py  debug_engine.py  debug_example.json  demoqa_prd.md  executor.py  explorer.py  feature_generator.py  gauntlet_results.md  generator.py  graph_crawl_prd.md  locator_db.py  login_prd.md  main.py  mobile_plan.md  parser.py  patcher.py  plan.md  planner.py  probe.py  (+24 more)
action/: README.md  action.yml
backend/: __init__.py  app.py  config.py  database.py  middleware.py  models.py  schemas.py  worker.py
docs/: GETTING_STARTED.md
engine/: __init__.py  graph.py  quick_scan.py  validation.py
examples/: README.md  python-playwright.yml  self-heal-on-failure.yml  typescript-playwright.yml
extension/: manifest.json  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
plans/: TC001_homepage_plan.json  TC001_login_plan.json  TC001_login_success_plan.json  TC001_verify_homepage_plan.json  TC002_add_to_cart_plan.json  TC002_filter_category_plan.json  TC002_forgot_password_plan.json  TC002_register_plan.json  TC002_registration_plan.json  TC002_registration_success_plan.json  TC002_verify_login_page_plan.json  TC003_add_to_cart_plan.json  TC003_checkout_plan.json  TC003_filter_eco_friendly_plan.json  TC003_filter_hand_tools_plan.json  TC003_forgot-password_plan.json  TC003_forgot_password_plan.json  TC003_login_with_valid_credentials_plan.json  TC003_place_order_plan.json  TC003_product_filter_hand_tools_plan.json  TC003_product_filter_plan.json  TC003_product_search_filter_plan.json  TC003_product_search_plan.json  TC003_register_plan.json  TC003_search_product_plan.json  TC003_user_registration_plan.json  TC003_view_product_plan.json  TC004_add_to_basket_plan.json  TC004_add_to_cart_and_checkout_plan.json  TC004_add_to_cart_checkout_plan.json  TC004_add_to_cart_plan.json  TC004_browse-products_plan.json  TC004_browse_products_plan.json  TC004_checkout_flow_plan.json  TC004_checkout_plan.json  TC004_filters_plan.json  TC004_login_with_invalid_email_plan.json  TC004_product_catalog_plan.json  TC004_product_details_plan.json  TC004_product_information_plan.json  (+41 more)
scripts/: run_gauntlet.py  validate_e2e.py
(+87 files in other folders)
